--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/bcryptjs": "^2.4.4",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.5",
+    "@types/passport": "^1.0.12",
+    "@types/passport-local": "^1.0.35",
     "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
@@ -33,6 +37,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
     "eslint-plugin-import": "^2.28.0",
     "eslint-plugin-n": "^16.0.1",
