--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.0.0",
     "cookie-parser": "~1.4.4",
+    "date-fns": "^3.0.6",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
@@ -31,6 +32,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "moment": "^2.30.1",
     "mongoose": "^7.4.1",
     "morgan": "~1.9.1",
     "passport": "^0.6.0",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "ejs-lint": "^2.0.0",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^37.0.0",
