--- a/package.json
+++ b/package.json
@@ -1,56 +1,58 @@
 {
-  "name": "clubhouse",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "ts-node ./src/app.ts",
-    "dev": "DEBUG=clubhouse:* node-dev ./src/app.ts",
-    "build": "tsc -p .",
-    "build:css": "postcss src/styles/main.css -o public/stylesheets/style.css",
-    "dev:css": "tailwindcss -i ./src/styles/main.css -o ./public/stylesheets/style.css --watch"
-  },
-  "dependencies": {
-    "@types/bcryptjs": "^2.4.4",
-    "@types/connect-flash": "^0.0.38",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.7",
-    "@types/morgan": "^1.9.4",
-    "@types/node": "^20.4.5",
-    "@types/passport": "^1.0.12",
-    "@types/passport-local": "^1.0.35",
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^5.0.0",
-    "cookie-parser": "~1.4.4",
-    "date-fns": "^3.0.6",
-    "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "express-session": "^1.17.3",
-    "express-validator": "^7.0.1",
-    "http-errors": "~1.6.3",
-    "moment": "^2.30.1",
-    "mongoose": "^7.4.1",
-    "morgan": "~1.9.1",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "ejs-lint": "^2.0.0",
-    "eslint": "^8.46.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-config-standard-with-typescript": "^37.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-n": "^16.0.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "node-dev": "^8.0.0",
-    "tailwindcss": "^3.3.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
-  }
+    "name": "clubhouse",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "ts-node ./src/app.ts",
+        "dev": "DEBUG=clubhouse:* node-dev ./src/app.ts",
+        "build": "tsc -p .",
+        "build:css": "postcss src/styles/main.css -o public/stylesheets/style.css",
+        "dev:css": "tailwindcss -i ./src/styles/main.css -o ./public/stylesheets/style.css --watch"
+    },
+    "dependencies": {
+        "@types/bcryptjs": "^2.4.4",
+        "@types/connect-flash": "^0.0.38",
+        "@types/cookie-parser": "^1.4.3",
+        "@types/express": "^4.17.17",
+        "@types/express-session": "^1.17.7",
+        "@types/morgan": "^1.9.4",
+        "@types/node": "^20.4.5",
+        "@types/passport": "^1.0.12",
+        "@types/passport-local": "^1.0.35",
+        "bcryptjs": "^2.4.3",
+        "connect-flash": "^0.1.1",
+        "connect-mongo": "^5.0.0",
+        "cookie-parser": "~1.4.4",
+        "date-fns": "^3.0.6",
+        "debug": "~2.6.9",
+        "dotenv": "^16.3.1",
+        "ejs": "^3.1.9",
+        "express": "^4.18.2",
+        "express-async-handler": "^1.2.0",
+        "express-session": "^1.17.3",
+        "express-validator": "^7.0.1",
+        "http-errors": "~1.6.3",
+        "moment": "^2.30.1",
+        "mongoose": "^7.4.1",
+        "morgan": "~1.9.1",
+        "passport": "^0.6.0",
+        "passport-local": "^1.0.0"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.62.0",
+        "ejs-lint": "^2.0.0",
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-config-standard-with-typescript": "^37.0.0",
+        "eslint-plugin-import": "^2.28.0",
+        "eslint-plugin-n": "^16.0.1",
+        "eslint-plugin-prettier": "^5.0.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "node-dev": "^8.0.0",
+        "prettier": "^3.1.1",
+        "prettier-plugin-tailwindcss": "^0.5.10",
+        "tailwindcss": "^3.3.3",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6"
+    }
 }
